# boolean-expression-testsuite

./: .gitmodules  Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  TruthTable.h  boolean_inverse_test.cxx  boolean_permutations_test.cxx  boolean_simplification_test.cxx  boolean_truth_test.cxx  boolean_usage_test.cxx
